Tests/DiagnosticTests/Resources/no-module.silt
id : ∀ {A: Type} A -> A
-- expected-error@-1 {{unexpected token '{{.*}}'}}
id x = x

